--- a/index.html
+++ b/index.html
@@ -35,11 +35,16 @@
       <div class="container my-5">
         <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 bg-valotools-main shadow-lg">
           <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
-            <h1 class="display-7 fw-bold lh-1">Start exploring today!</h1>
-            <p class="lead">Valorant is a big player in the shooter market, so of course people dedicated their time to create tools. check them out here:</p>
-            <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-              <button type="button" class="btn btn-valotools-main btn-lg px-4 me-md-2 fw-bold" onclick="window.location.href='./library/'">Public tool Library</button>
-              <button type="button" class="btn btn-valotools-main-outline btn-lg px-4" onclick="window.location.href='https://github.com/vesturo?tab=repositories&q=valo&type=&language=&sort='">Our own Tools</button>
+            <div class="row">
+              <h1 class="display-7 fw-bold lh-1">Start exploring today!</h1>
+              <p class="lead">Valorant is a big player in the shooter market, so of course people dedicated their time to create tools. check them out here:</p>
+              <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
+                <button type="button" class="btn btn-valotools-main btn-lg px-4 me-md-2 fw-bold" onclick="window.location.href='./library/'">Public tool Library</button>
+                <button type="button" class="btn btn-valotools-main-outline btn-lg px-4" onclick="window.location.href='https://github.com/vesturo?tab=repositories&q=valo&type=&language=&sort='">Our own Tools</button>
+              </div>
+            </div>
+            <div class="row mt-2 pt-3" id="showcase">
+              <p class="lead">Library Highlight of the day:</p>
             </div>
           </div>
           <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
